examples/test/testpolicy2342.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2342
  namespace: namespace486
spec:
  podSelector:
    matchLabels:
      key35: value17
      key41: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value21
      podSelector:
        matchLabels:
          key48: value8
          key9: value14
